First addition of content to our page

--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,9 @@
         <title>Hello Course!</title>
     </head>
     <body>
-       <h1>Hi coursera! My name is Evans, and I am here to learn.</h1> 
+       <h1>Hi coursera! My name is Evans, and I am here to learn.
+           I am very excited to start learning with you guys.
+           it's a great course.
+       </h1> 
     </body>
 </html>
