--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,9 @@
        <h1>Hi coursera! My name is Evans, and I am here to learn.
            I am very excited to start learning with you guys.
            it's a great course.
+           I faced a lot of challenges setting up this environment.
+           But now i am getting comfortable using this platform.
+           I wish to be a very great web developer and finally a full stack developer.
        </h1> 
     </body>
 </html>
